--- a/ChatFilterMC/src/main/resources/FilterList.yml
+++ b/ChatFilterMC/src/main/resources/FilterList.yml
@@ -8,9 +8,13 @@ swears:
   msgToStaffEnabled: true
   commands:
     - msg [senderName] Don't swear.
+  history: true
+  maxStrikes: 100
+  strikeActions:
+    - msg [senderName] That's it buddy!
 
 slurs:
-  enabled: false
+  enabled: true
   regex:
     - ^.*(c|€|🇨|©️|ϲ|с|ᴄ|ⲥ|ꮯ|🅒)+\s*(r|🇷|®️|г|ᴦ|ⲅ|ꭇ|ꭈ|ꮁ|🅡)+\s*(a|4|@|∆|/-\\|/_\\|Д|🇦|🅰️|ɑ|а|🅐)?+\s*(c|€|🇨|©️|ϲ|с|ᴄ|ⲥ|ꮯ|🅒)+\s*(k|\|<|🇰|🅚)+\s*(e|3|£|🇪|е|ҽ|ꬲ|🅔)?+\s*(r|🇷|®️|г|ᴦ|ⲅ|ꭇ|ꭈ|ꮁ|🅡)+.*$
   mode: replace
@@ -21,3 +25,7 @@ slurs:
   commands:
     - msg [senderName] Stop being an edgy little kid.  You're not funny, you're just
       pathetic.
+  history: true
+  maxStrikes: 100
+  strikeActions:
+    - msg [senderName] That's it buddy!
