statement builder and began changing if-else to switch in Filter.java

--- a/ChatFilterMC/src/main/resources/plugin.yml
+++ b/ChatFilterMC/src/main/resources/plugin.yml
@@ -6,8 +6,8 @@ api-version: '1.20'
 commands:
   filter:
     description: Modify the chat filter.
-    usage: /filter
-    aliases: fil
+    usage: /mcchatfilter
+    aliases: mcf, cf
     permission: filter
     permission-message: You do not have permission to run this command.
 permissions:
