--- a/ChatFilterMC/src/main/resources/FilterList.yml
+++ b/ChatFilterMC/src/main/resources/FilterList.yml
@@ -18,6 +18,7 @@
 swears:
   enabled: true
   mode: censor
+  partialMatches: false
   replaceWith: I have poor vocabulary
   msgToStaff: '[senderName] is trying to swear.'
   msgToStaffEnabled: true
@@ -34,6 +35,7 @@ swears:
 slurs:
   enabled: true
   mode: replace
+  partialMatches: false
   replaceWith: I use slurs as a replacement of actual humor so that if anyone calls
     me out I can call them triggered instead of having any self-reflection.
   msgToStaff: '[senderName] tried to use a slur!'
