--- a/ChatFilterMC/src/main/resources/plugin.yml
+++ b/ChatFilterMC/src/main/resources/plugin.yml
@@ -6,8 +6,8 @@ api-version: '1.20'
 commands:
   filter:
     description: Modify the chat filter.
-    usage: /mcchatfilter
-    aliases: mcf, cf
+    usage: /chatfiltermc
+    aliases: cfmc
     permission: filter
     permission-message: You do not have permission to run this command.
 permissions:
