fixed broadcasts not working

--- a/ChatFilterMC/src/main/resources/FilterList.yml
+++ b/ChatFilterMC/src/main/resources/FilterList.yml
@@ -9,7 +9,7 @@
 # replace: replaces filtered message with 'replaceWith'
 # clear: message is not sent at all
 
-# msgToAdmin: sends this message to all online admins if enabled
+# msgToStaff: sends this message to all online admins if enabled
 # commands: commands which run after a filtered word was detected
 # history saves filtered messages to notes
 # strikeActions: commands automatically run when maxStrikes is reached by a player
@@ -24,12 +24,12 @@ groups:
     replaceWith:
       - I use slurs as a replacement of actual humor so that if anyone calls me out I can call them triggered instead of having any self-reflection.
       - I am stuck in my edgy phase
-    msgToAdmin: '[senderName] tried to use a slur!'
-    msgToAdminEnabled: true
+    msgToStaff: '[senderName] tried to use a slur!'
+    msgToStaffEnabled: true
     commands:
       - msg [senderName] Stop being an edgy little kid.  You're not funny, you're just
         pathetic.
-      - filter notes add [senderName] [date] [msg]
+      - cfmc notes add [senderName] [date] [msg]
     history: true
     maxStrikes: 100
     strikeActions:
@@ -45,11 +45,11 @@ groups:
     replaceWith:
       - I have poor vocabulary
       - I am an adult!
-    msgToAdmin: '[senderName] is trying to swear.'
-    msgToAdminEnabled: true
+    msgToStaff: '[senderName] is trying to swear.'
+    msgToStaffEnabled: true
     commands:
       - msg [senderName] Don't swear.
-      - filter notes add [senderName] [date] [msg]
+      - cfmc notes add [senderName] [date] [msg]
     history: true
     maxStrikes: 100
     strikeActions:
@@ -65,11 +65,11 @@ groups:
     replaceWith:
       - I am annoying
       - I am an child!
-    msgToAdmin: '[senderName] is being annoying.'
-    msgToAdminEnabled: true
+    msgToStaff: '[senderName] is being annoying.'
+    msgToStaffEnabled: true
     commands:
       - msg [senderName] Don't be annoying.
-      - filter notes add [senderName] [date] [msg]
+      - cfmc notes add [senderName] [date] [msg]
     history: true
     maxStrikes: 100
     strikeActions:
@@ -85,11 +85,11 @@ groups:
       replaceWith:
         - I am cringe
         - I am a cringe child!
-      msgToAdmin: '[senderName] is being cringe.'
-      msgToAdminEnabled: true
+      msgToStaff: '[senderName] is being cringe.'
+      msgToStaffEnabled: true
       commands:
         - msg [senderName] Don't be cringe.
-        - filter notes add [senderName] [date] [msg]
+        - cfmc notes add [senderName] [date] [msg]
       history: true
       maxStrikes: 100
       strikeActions:
@@ -123,4 +123,4 @@ bot:
   enabled: true
   time: 400
   commands:
-    - msg [senderName] Sop spamming, bot!
+    - msg [senderName] Stop spamming, bot!
