--- a/ChatFilterMC/src/main/resources/FilterList.yml
+++ b/ChatFilterMC/src/main/resources/FilterList.yml
@@ -9,11 +9,7 @@
 # replace: replaces filtered message with 'replaceWith'
 # clear: message is not sent at all
 
-<<<<<<< Updated upstream
-# msgToStaff: sends this message to all online admins if enabled
-=======
 # msgToStaff: sends this message to all online staff if enabled
->>>>>>> Stashed changes
 # commands: commands which run after a filtered word was detected
 # history saves filtered messages to notes
 # strikeActions: commands automatically run when maxStrikes is reached by a player
@@ -33,7 +29,7 @@ groups:
     commands:
       - msg [senderName] Stop being an edgy little kid.  You're not funny, you're just
         pathetic.
-      - cfmc notes add [senderName] [date] [msg]
+      - cfmc notes add [date] [senderName] [msg]
     history: true
     maxStrikes: 100
     strikeActions:
